--- a/sapl-hivemq-extension/pom.xml
+++ b/sapl-hivemq-extension/pom.xml
@@ -90,6 +90,7 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-validator</groupId>
