--- a/sapl-axon/pom.xml
+++ b/sapl-axon/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>io.sapl</groupId>
 		<artifactId>sapl-policy-engine</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
 	<artifactId>sapl-axon</artifactId>
 
-	<name>SAPL Axon Framework Itegration</name>
+	<name>SAPL Axon Framework Integration</name>
 	<description>SAPL Axon Policy Enforcement Points</description>
 
 	<properties>
