--- a/sapl-hivemq-extension/pom.xml
+++ b/sapl-hivemq-extension/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>io.sapl</groupId>
     <artifactId>sapl-hivemq-extension</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <name>SAPL HiveMQ Extension</name>
 
@@ -33,7 +33,7 @@
         <asciidoctor.version>1.5.7.1</asciidoctor.version>
         <output.dir>${basedir}</output.dir>
         <source.document.name>README.adoc</source.document.name>
-        <sapl.version>2.1.0-SNAPSHOT</sapl.version>
+        <sapl.version>3.0.0-SNAPSHOT</sapl.version>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -57,7 +57,7 @@
             <dependency>
                 <groupId>io.sapl</groupId>
                 <artifactId>sapl-bom</artifactId>
-                <version>2.1.0-SNAPSHOT</version>
+                <version>${sapl.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
