--- a/sapl-geo/pom.xml
+++ b/sapl-geo/pom.xml
@@ -124,25 +124,27 @@
 		<repository>
 			<id>central</id>
 			<url>https://repo.maven.apache.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>osgeo</id>
-			<name>OSGeo Release Repository</name>
-			<url>https://repo.osgeo.org/repository/release/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+			<snapshots><enabled>false</enabled></snapshots>
 		</repository>
 		<repository>
 			<id>ossrh</id>
 			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
+			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
+		<repository>
+    		<id>osgeo</id>
+    		<name>OSGeo Release Repository</name>
+    		<url>https://repo.osgeo.org/repository/release/</url>
+    		<snapshots><enabled>false</enabled></snapshots>
+    		<releases><enabled>true</enabled></releases>
+    	</repository>
+    	<repository>
+    		<id>osgeo-snapshot</id>
+    		<name>OSGeo Snapshot Repository</name>
+    		<url>https://repo.osgeo.org/repository/snapshot/</url>
+    		<snapshots><enabled>true</enabled></snapshots>
+    		<releases><enabled>false</enabled></releases>
+    	</repository>
 	</repositories>
 	<build>
 		<plugins>
