--- a/sapl-axon/pom.xml
+++ b/sapl-axon/pom.xml
@@ -77,7 +77,7 @@
 			<artifactId>sapl-spring-security</artifactId>
 		</dependency>
 
-		<!-- Utiltiy -->
+		<!-- Utility -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -160,7 +160,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<goals>
