--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2017-2021 Dominic Heutelbeck (dominic@heutelbeck.com)
+# Copyright © 2017-2024 Dominic Heutelbeck (dominic@heutelbeck.com)
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -40,14 +40,9 @@ jobs:
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: ${{ matrix.java }}
         cache: 'maven'
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
 
     - name: Run tests
       run: mvn -B package javadoc:jar
@@ -75,16 +70,11 @@ jobs:
         fetch-depth: 0
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # v3.13.0
       with:
-        distribution: 'adopt'
+        distribution: temurin
         java-version: 17
         cache: 'maven'
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
       
     - name: Run analysis (Unit Tests, IT, JaCoCo, Sonar)    
       env:
@@ -99,8 +89,13 @@ jobs:
         retain_days: 1
         keep_minimum_runs: 6
 
-    - name: Clean up local repository before caching 
+    - name: Clean up local repository before caching (Linux/Mac)
+      if: ${{ matrix.os != 'windows-latest'}}
       run: rm -rf ~/.m2/repository/io/sapl
+
+    - name: Clean up local repository before caching (Win)
+      if: ${{ matrix.os == 'windows-latest'}}
+      run: rm -Recurse -Force ~/.m2/repository/io/sapl
 
   deploy:
     needs: [analyze]
@@ -116,9 +111,9 @@ jobs:
         fetch-depth: 0
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0 # v3.13.0
       with:
-        distribution: 'adopt'
+        distribution: temurin
         java-version: 17
         cache: 'maven'
 
@@ -140,11 +135,6 @@ jobs:
               "username": "${{ secrets.GHUB_USERNAME }}",
               "password": "${{ secrets.GHUB_ACCESS_TOKEN }}"
            }]
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3.5.1
-      with:
-        node-version: '18'
 
     - name: Install GPG Code Signing Key
       run: |
