--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,10 +76,10 @@ jobs:
         java-version: 17
         cache: 'maven'
       
-    - name: Run analysis (Unit Tests, IT, JaCoCo, Sonar)    
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B clean verify sonar:sonar failsafe:integration-test -Pcoverage,it  -Dsonar.login=${SONAR_TOKEN}
+#    - name: Run analysis (Unit Tests, IT, JaCoCo, Sonar)    
+#      env:
+#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      run: mvn -B clean verify sonar:sonar failsafe:integration-test -Pcoverage,it  -Dsonar.login=${SONAR_TOKEN}
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@v2
