--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+# Note: when updating actions version pinning can be done using:
+# https://app.stepsecurity.io/secureworkflow before committing the changes.
+
 name: Build
 
 on:
@@ -32,13 +36,13 @@ jobs:
 
     steps:
     - name: Check out
-      uses: actions/checkout@v4
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         fetch-depth: 0
 
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
         distribution: 'temurin'
         java-version: ${{ matrix.java }}
@@ -63,14 +67,14 @@ jobs:
     
     steps:
     - name: Check out
-      uses: actions/checkout@v4
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         # avoid shallow clone to ensure correct sonarqube auto assignment of blame
         fetch-depth: 0
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
         distribution: temurin
         java-version: 17
@@ -82,7 +86,7 @@ jobs:
 #      run: mvn -B clean verify sonar:sonar failsafe:integration-test -Pcoverage,it  -Dsonar.login=${SONAR_TOKEN}
 
     - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
+      uses: Mattraks/delete-workflow-runs@99626ea7e2020a8ab987073a1e127e2597102694 # v2
       with:
         token: ${{ github.token }}
         repository: ${{ github.repository }}
@@ -105,20 +109,20 @@ jobs:
     
     steps:
     - name: Check out
-      uses: actions/checkout@v4
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         fetch-depth: 0
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
         distribution: temurin
         java-version: 17
         cache: 'maven'
 
     - name: Configure servers
-      uses: s4u/maven-settings-action@v3.0.0
+      uses: s4u/maven-settings-action@7802f6aec16c9098b4798ad1f1d8ac75198194bd # v3.0.0
       with:
         githubServer: false
         servers: |
