--- a/.github/workflows/axon_manual_build.yml
+++ b/.github/workflows/axon_manual_build.yml
@@ -34,13 +34,13 @@ jobs:
 
     steps:
     - name: Check out
-      uses: actions/checkout@v4
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         fetch-depth: 0
 
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
         distribution: 'adopt'
         java-version: ${{ matrix.java }}
@@ -68,14 +68,14 @@ jobs:
     
     steps:
     - name: Check out
-      uses: actions/checkout@v4
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         lfs: true
         # avoid shallow clone to ensure correct sonarqube auto assignment of blame
         fetch-depth: 0
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
       with:
         distribution: 'adopt'
         java-version: 17
@@ -101,7 +101,7 @@ jobs:
     
     steps:
     - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@v2
+      uses: Mattraks/delete-workflow-runs@99626ea7e2020a8ab987073a1e127e2597102694 # v2
       with:
         token: ${{ github.token }}
         repository: ${{ github.repository }}
