--- a/sapl-demo-ethereum/pom.xml
+++ b/sapl-demo-ethereum/pom.xml
@@ -20,7 +20,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -329,6 +329,19 @@
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
+
+	<repositories>
+		<repository>
+			<!--
+				The central snapshot repository makes the SAPL -SNAPSHOT releases available. 
+			-->
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 </project>
