--- a/sapl-demo-ethereum/pom.xml
+++ b/sapl-demo-ethereum/pom.xml
@@ -49,7 +49,11 @@
 		<version.lombok>1.18.30</version.lombok>
 		<selenium.version>4.8.3</selenium.version>
 		<version.testcontainers>1.18.0</version.testcontainers>
-		<maven.deploy.skip>true</maven.deploy.skip>
+		<spotbugs.version>4.7.3.6</spotbugs.version>
+		<sbcontrib.version>7.6.0</sbcontrib.version>
+		<failsafe.version>3.2.5</failsafe.version>
+		<jacoco.version>0.8.11</jacoco.version>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 		<argLine />
 	</properties>
 
@@ -324,6 +328,61 @@
 							<trimStackTrace>false</trimStackTrace>
 							<enableAssertions>true</enableAssertions>
 							<classesDirectory>${project.build.outputDirectory}</classesDirectory>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>coverage</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${jacoco.version}</version>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+								<configuration>
+									<formats>
+										<format>XML</format>
+									</formats>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>spotbugs</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs-maven-plugin</artifactId>
+						<version>${spotbugs.version}</version>
+						<configuration>
+							<excludeFilterFile>spotbugsExcludeFilter.xml</excludeFilterFile>
+							<includeTests>true</includeTests>
+							<addSourceDirs>true</addSourceDirs>
+							<plugins>
+								<plugin>
+									<groupId>com.mebigfatguy.sb-contrib</groupId>
+									<artifactId>sb-contrib</artifactId>
+									<version>${sbcontrib.version}</version>
+								</plugin>
+							</plugins>
 						</configuration>
 					</plugin>
 				</plugins>
