--- a/sapl-demo-vaadin/tsconfig.json
+++ b/sapl-demo-vaadin/tsconfig.json
@@ -4,36 +4,42 @@
 // You might want to change the configurations to fit your preferences
 // For more information about the configurations, please refer to http://www.typescriptlang.org/docs/handbook/tsconfig-json.html
 {
-  "_version": "9",
-  "compilerOptions": {
-    "sourceMap": true,
-    "jsx": "react-jsx",
-    "inlineSources": true,
-    "module": "esNext",
-    "target": "es2020",
-    "moduleResolution": "bundler",
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "baseUrl": "frontend",
-    "paths": {
-      "@vaadin/flow-frontend": ["generated/jar-resources"],
-      "@vaadin/flow-frontend/*": ["generated/jar-resources/*"],
-      "Frontend/*": ["*"]
-    }
-  },
-  "include": [
-    "frontend/**/*",
-    "types.d.ts"
-  ],
-  "exclude": [
-    "frontend/generated/jar-resources/**"
-  ]
+	"_version": "9",
+	"compilerOptions": {
+		"sourceMap": true,
+		"jsx": "react-jsx",
+		"inlineSources": true,
+		"module": "esNext",
+		"target": "es2020",
+		"moduleResolution": "bundler",
+		"strict": true,
+		"skipLibCheck": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"experimentalDecorators": true,
+		"useDefineForClassFields": false,
+		"baseUrl": "frontend",
+		"paths": {
+			"@vaadin/flow-frontend": [
+				"generated/jar-resources"
+			],
+			"@vaadin/flow-frontend/*": [
+				"generated/jar-resources/*"
+			],
+			"Frontend/*": [
+				"*"
+			]
+		}
+	},
+	"include": [
+		"frontend/**/*",
+		"types.d.ts"
+	],
+	"exclude": [
+		"frontend/generated/jar-resources/**"
+	]
 }
