--- a/sapl-ethereum/pom.xml
+++ b/sapl-ethereum/pom.xml
@@ -37,7 +37,7 @@
 	<properties>
 		<solidity.version>0.7.4</solidity.version>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -133,11 +133,13 @@
 				<version>4.10.0</version>
 				<configuration>
 					<packageName>io.sapl.interpreter.pip.contracts</packageName>
-					<sourceDestination>${project.basedir}/target/generated-test-sources/contracts</sourceDestination>
+					<sourceDestination>
+						${project.basedir}/target/generated-test-sources/contracts</sourceDestination>
 					<nativeJavaType>true</nativeJavaType>
 					<outputFormat>java</outputFormat>
 					<soliditySourceFiles>
-						<directory>${project.basedir}/src/test/resources/solidity</directory>
+						<directory>
+							${project.basedir}/src/test/resources/solidity</directory>
 						<includes>
 							<include>**/*.sol</include>
 						</includes>
@@ -159,7 +161,7 @@
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
 					<execution>
-		        		<?m2e execute onConfiguration,onIncremental?>
+						<?m2e execute onConfiguration,onIncremental?>
 						<id>add-contracts</id>
 						<phase>initialize</phase>
 						<goals>
